--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 					With a Bachelor's degree in Computer Science and two years of high-octane Business Information Management studies, I’m your go-to guy for all things techy and business-y. I like to think of myself as a customer service superhero, minus the cape (I’m still working on that). My superpowers include solving problems faster than you can say “CRM software,” and delivering customer satisfaction that’s out of this world.
 
-					When I’m not busy turning customer frowns upside down, you can find me geeking out over HTML and CSS, or dreaming of a world where every data analysis task comes with a built-in espresso machine. I’ve got a knack for making sense of chaos and turning it into something that even my grandma would be proud of.
+					When I’m not busy turning customer frowns upside down, you can find me geeking out over Figma, or dreaming of a world where every data analysis task comes with a built-in espresso machine. I’ve got a knack for making sense of chaos and turning it into something that even my grandma would be proud of.
 
 					So, if you’re looking for someone who can juggle data, design, and customer service with a smile (and maybe a few dad jokes), I’m your guy. Let’s make some magic happen!.</p>
                 </div>
