--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,28 @@
 	<div class="slider">
 		<div class="list">
 			<div class="item active">
+				<img src="assets/css/images/image6.jpg">
+				<div class="overlay"></div>
+				<div class="content">
+					<p>Design</p>
+					<h2>City Website</h2>
+					<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p> -->
+					<br>
+					<a href="project6.html" target="_blank"><button class="custom-button">View</button></a>
+				</div>
+			</div>
+			<div class="item">
+				<img src="assets/css/images/image7.jpg">
+				<div class="overlay"></div>
+				<div class="content">
+					<p>Design</p>
+					<h2>City Website Mobile</h2>
+					<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p> -->
+					<br>
+					<a href="project7.html" target="_blank"><button class="custom-button">View</button></a>
+				</div>
+			</div>
+			<div class="item">
 				<img src="assets/css/images/image3.jpg">
 				<div class="overlay"></div>
 				<div class="content">
@@ -85,6 +107,12 @@
 
 		<div class="thumbnail">
 			<div class="item active">
+				<img src="assets/css/images/image6.png">
+			</div>
+			<div class="item">
+				<img src="assets/css/images/image7.png">
+			</div>
+			<div class="item">
 				<img src="assets/css/images/image3.png">
 			</div>
 			<div class="item">
