--- a/project6.html
+++ b/project6.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" href="images/about.png" type="image/x-icon">
+    <link rel="icon" href="images/about.png" type="image/png">
     <title>City Website</title>
-    <link rel="icon" type="image/png" href="favicon.png">
     <style type="text/css">
         .container-fluid {
             background: gray;
