--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
                         <h3>City Website</h3>
-                        <!-- <p>web, branding</p> -->
+                        <p>View Live</p>
                       </div>
                     </div>
                     <img src="images/image6.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -135,7 +135,7 @@
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
                         <h3>Weather App</h3>
-                        <!-- <p>branding, packaging, illustration</p> -->
+                        <p>View Live</p>
                       </div>
                     </div>
                     <img src="images/image2.png" class="lazyload  img-fluid" alt="Images" />
@@ -148,7 +148,7 @@
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
                         <h3>City Website Mobile</h3>
-                        <!-- <p>branding, packaging</p> -->
+                        <p>View Live</p>
                       </div>
                     </div>
                     <img src="images/image7.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -161,7 +161,7 @@
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
                         <h3>E-Commerce Site</h3>
-                        <!-- <p>web, branding</p> -->
+                        <p>View Live</p>
                       </div>
                     </div>
                     <img src="images/image1.png" class="lazyload  img-fluid" alt="Images" />
@@ -174,7 +174,7 @@
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
                         <h3>Carousel</h3>
-                        <!-- <p>web, branding</p> -->
+                        <p>View Live</p>
                       </div>
                     </div>
                     <img src="images/image3.png" class="lazyload  img-fluid" alt="Images" />
@@ -186,7 +186,7 @@
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
                         <h3>Dashboard</h3>
-                        <!-- <p>branding, packaging, illustration</p> -->
+                        <p>View Live</p>
                       </div>
                     </div>
                     <img src="images/image4.png" class="lazyload  img-fluid" alt="Images" />
