--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
               <h2 class="mr-auto heading-h2"><span class="gsap-reveal">Works</span></h2>
             </div>
             <div id="posts" class="row gutter-isotope-item">
-              <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="project6.html" target="_blank" class="portfolio-item isotope-item gsap-reveal-img" data-id="1">
+              <div class="item branding packaging illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2 ">
+                <a href="bookstore.html" target="_blank" class="portfolio-item item-portrait isotope-item gsap-reveal-img" data-id="3">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>City Website</h3>
+                        <h3>Book Store Made in Bootstrap 5</h3>
                         <p>View Live</p>
                       </div>
                     </div>
-                    <img src="images/image6.jpg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/bookstore.png" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
               <div class="item branding packaging illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2 ">
@@ -154,7 +154,18 @@
                     <img src="images/image7.jpg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
-
+              <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+                <a href="project6.html" target="_blank" class="portfolio-item isotope-item gsap-reveal-img" data-id="1">
+                    <div class="overlay">
+                      <span class="wrap-icon icon-link2"></span>
+                      <div class="portfolio-item-content">
+                        <h3>City Website</h3>
+                        <p>View Live</p>
+                      </div>
+                    </div>
+                    <img src="images/image6.jpg" class="lazyload  img-fluid" alt="Images" />
+                  </a>
+              </div>
               <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
                 <a href="project1.html" target="_blank" class="portfolio-item item-portrait isotope-item gsap-reveal-img" data-id="2">
                     <div class="overlay">
@@ -220,7 +231,7 @@
             </div>
             <div class="col-lg-4 pr-lg-5">
               <h3 class="mb-4 heading-h3"><span class="gsap-reveal">Hi, I'm Mark Tyrone Jay Bendong</span></h3>
-              <p class="lead gsap-reveal">a passionate UI Designer with a strong foundation in both design and development. With expertise in Figma, WordPress, Elementor, HTML, and CSS. I bring ideas to life, creating visually appealing and user-friendly digital experiences.</p>
+              <p class="lead gsap-reveal">a passionate UI/Web Designer with a strong foundation in both design and development. With expertise in Figma, Bootstrap, HTML, CSS, WordPress, Elementor and JavaScript. I bring ideas to life, creating visually appealing and user-friendly digital experiences.</p>
               <p class="mb-4 gsap-reveal">I focus on blending creativity with technical skills to deliver solutions that not only look good but also work seamlessly.</p>
               <!-- <p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">Download my CV</a></p> -->
             </div>
