--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               
             <div class="col-md-7 mx-auto text-center">
               <h1 class="heading gsap-reveal-hero">MTJBendong</h1>
-              <h2 class="subheading gsap-reveal-hero">A Product Designer</h2>
+              <h2 class="subheading gsap-reveal-hero">UI/Web Product Designer</h2>
             </div>
 
           </div>
@@ -141,7 +141,18 @@
                     <img src="images/image2.png" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
-              
+              <div class="item branding packaging illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2 ">
+                <a href="https://mtjbendong.github.io/highland/" target="_blank" class="portfolio-item item-portrait isotope-item gsap-reveal-img" data-id="3">
+                    <div class="overlay">
+                      <span class="wrap-icon icon-link2"></span>
+                      <div class="portfolio-item-content">
+                        <h3>Highland Website Made in Bootstrap 5</h3>
+                        <p>View Live</p>
+                      </div>
+                    </div>
+                    <img src="images/highland.png" class="lazyload  img-fluid" alt="Images" />
+                  </a>
+              </div>
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
                 <a href="project7.html" target="_blank" class="portfolio-item isotope-item gsap-reveal-img" data-id="4">
                     <div class="overlay">
